navbar, banner, curriculum section

--- a/index.html
+++ b/index.html
@@ -3,8 +3,118 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Kids School</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body class="quicksand-font">
+    <!-- Header Section -->
+    <header>
+      <nav class="nav display">
+        <div class="logo display">
+          <img src="assets/logo.png" alt="" />
+          <h1>School</h1>
+        </div>
+
+        <ul class="nav-list display">
+          <li class="nav-items"><a class="nav-items-1" href="">Home</a></li>
+          <li class="nav-items">
+            <a class="nav-items-2" href="">About</a>
+          </li>
+          <li class="nav-items">
+            <a class="nav-items-3" href="">Facilities</a>
+          </li>
+          <li class="nav-items">
+            <a class="nav-items-4" href="">Admission</a>
+          </li>
+        </ul>
+        <i class="fa-solid fa-bars"></i>
+        <button class="btn-primary">Contact</button>
+      </nav>
+
+      <!-- Banner -->
+      <div class="banner display">
+        <div class="banner-content">
+          <h1>
+            <span id="span1">Empowering</span><br />
+            students from small age
+            <span id="span2">towards vision</span>
+          </h1>
+          <p>
+            With the courage, Confidence, Creativity and Compassion to make
+            their Unique Contribution in a Diverse and Dynamic World.
+          </p>
+          <button class="btn-primary">Enroll Now</button>
+        </div>
+
+        <div class="banner-img">
+          <img src="assets/hero-kids.png" alt="" />
+        </div>
+      </div>
+    </header>
+
+    <!-- Main Section -->
+    <main class="main">
+      <!-- Standard Curriculum Section -->
+      <h1 class="main-title">Standard Curriculum</h1>
+      <section class="card-container">
+        <div class="card-1">
+          <img src="assets/kinder.png" alt="" />
+          <h3 class="card-title">Kinder (3-6) Years</h3>
+          <p class="card-description">
+            Cum sociis natoque penatibus et magnis dis parturient montes,
+            nascetur ridiculus mu sdis parturient
+          </p>
+          <a class="card-link" href="">Read More</a>
+        </div>
+        <div class="card-2">
+          <img src="assets/elementary.png" alt="" />
+          <h3 class="card-title">Elementary School</h3>
+          <p class="card-description">
+            Cum sociis natoque penatibus et magnis dis parturient montes,
+            nascetur ridiculus mu sdis parturient
+          </p>
+          <a class="card-link" href="">Read More</a>
+        </div>
+        <div class="card-3">
+          <img src="assets/middle.png" alt="" />
+          <h3 class="card-title">Middle (10-16) Years</h3>
+          <p class="card-description">
+            Cum sociis natoque penatibus et magnis dis parturient montes,
+            nascetur ridiculus mu sdis parturient
+          </p>
+          <a class="card-link" href="">Read More</a>
+        </div>
+      </section>
+
+      <!-- Circle Arrow Icons -->
+      <div class="circle-arrow">
+        <a href=""
+          ><i class="fa-solid fa-circle-arrow-left fa-3x icon-color"></i
+        ></a>
+        <a href=""
+          ><i class="fa-solid fa-circle-arrow-right fa-3x icon-color"></i
+        ></a>
+      </div>
+
+      <!-- Our Stories Section -->
+
+      <h1 class="main-title">Our Stories</h1>
+    </main>
+
+    <!-- Footer Section -->
+    <footer></footer>
+  </body>
 </html>
